--- a/ros_dnn/CMakeLists.txt
+++ b/ros_dnn/CMakeLists.txt
@@ -66,7 +66,9 @@ link_directories(${OpenCV_LIBRARY_DIRS})
 ###############################################################################
 # EXECUTABLE
 
-add_definitions(-std=c++11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+#add_definitions(-std=c++11)
 
 set(LINK_LIBRARIES
   ${catkin_LIBRARIES}
